Remove some code smells